--- a/pages/WeatherApp/styleWeather.css
+++ b/pages/WeatherApp/styleWeather.css
@@ -18,8 +18,45 @@
 body {
     width: 100%;
     height: 1000px;
-    background-color: var(--first--bgColor);
+    background-color: var(--second--bgColor);
 }
+
+/*Theme*/
+.theme {
+    padding: 10px;
+    margin: 1rem 0 0 1rem;
+    border-radius: 10px;
+}
+.theme:focus-visible {
+    outline: none;
+}
+
+.theme-black {
+    padding: 10px;
+    margin: 1rem 0 0 1rem;
+    border-radius: 10px;
+}
+.theme-black:focus-visible {
+    outline: none;
+}
+
+/*Loading */
+.classic-3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10;
+    display: none;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 30px;
+    padding:0 5px 8px 0;
+    background:repeating-linear-gradient(90deg,currentColor 0 8%,#0000 0 10%) 200% 100%/200% 3px no-repeat;
+    animation:c3 2s steps(6) infinite;
+    color: rgba(39, 110, 245, 1);
+}
+@keyframes c3 {to{background-position: 80% 100%}}
 
 .weatherApp {
     width: 100%;
