--- a/pages/Expense Tracker/expenseApp.css
+++ b/pages/Expense Tracker/expenseApp.css
@@ -24,6 +24,17 @@
     text-transform: uppercase;
 }
 
+.type {
+    padding: 10px 10px;
+    border: none;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.type:focus-visible {
+    outline: none;
+}
+
 .container {
     position: absolute;
     top: 50%;
@@ -89,14 +100,16 @@
 
 .transactionList {
     border-bottom: 1px solid #444444;
+    padding-bottom: 2rem;
 }
 
 .transactionList .transactionName,
 .transactionList .transactionAmout {
     color: #000;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     padding: 0 0 10px 10px;
+    display: inline;
 }
 
 .btn__deleteTransaction {
@@ -118,7 +131,7 @@
 .spending {
     width: 20%;
     padding: 5px;
-    margin: 16px 0;
+    margin: 16px 0 20px 0;
     background-color: rgba(255, 0, 0, 0.5);
     border-radius: 10px;
 }
