--- a/pages/Expense Tracker/expenseApp.css
+++ b/pages/Expense Tracker/expenseApp.css
@@ -36,10 +36,9 @@
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
 }
 
 .infoTransaction {
@@ -102,6 +101,31 @@
     border-bottom: 1px solid #444444;
     padding-bottom: 2rem;
 }
+
+.listExpense {
+    position: relative;
+}
+
+.spinner-3 {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #25b09b;
+  position: absolute;
+  top: 30%;
+  left: 43%;
+  display: none;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
 
 .transactionList .transactionName,
 .transactionList .transactionAmout {
